--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+druid = "0.8.2"
 rand = "0.8.5"
 
 [profile.release]
-strip = true  # Automatically strip symbols from the binary.
-opt-level = "z"  # Optimize for size.
-lto = true # Link Time Optimization is enabled
-codegen-units = 1 # allow for maximum size reduction optimizations
-panic = "abort" # Configure action to do on panic
+strip = true            # Automatically strip symbols from the binary.
+opt-level = "z"         # Optimize for size.
+lto = true              # Link Time Optimization is enabled
+codegen-units = 1       # allow for maximum size reduction optimizations
+panic = "abort"         # Configure action to do on panic
