--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-iced = "0.7.0"
+druid = "0.8.2"
 rand = "0.8.5"
 stopwatch = "0.0.7"
 
