--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
+      run: apt install gtk3
       run: cargo build --verbose
