--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,16 @@
-steps:
-  - uses: actions/checkout@v3
-  - name: Test
-    run: cargo test
+name: Test
+
+on: [push, pull_request]
+
+env: 
+  CARGO_TERM_COLOR: always
+
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Test
+        run: cargo test
