--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,5 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Install pango development package
+        run: sudo apt-get update && sudo apt-get install -y libpango1.0-dev
+
+      - name: Setup Rust
+        uses: actions/setup-rust@v1
+
       - name: Test
         run: cargo test
