--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Build
 
 on: [push, pull_request]
 
@@ -19,5 +19,5 @@ jobs:
       - name: Install required libraries
         run: sudo apt-get install libgdk-pixbuf2.0-dev libglib2.0-dev libatk1.0-dev libcairo2-dev libpango1.0-dev libgtk-3-dev
 
-      - name: Test
-        run: cargo test --verbose
+      - name: Build
+        run: cargo build --verbose
