--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 iced = "0.8.0"
+iced_native = "0.9.1"
 rand = "0.8.5"
 stopwatch = "0.0.7"
 
